[gd_scene load_steps=13 format=3 uid="uid://nfck633p6tbu"]

[ext_resource type="Texture2D" uid="uid://c3l6ynlufxcfp" path="res://Assets/Sprites/Enemies/Boo.png" id="1_56r8o"]
[ext_resource type="Script" uid="uid://cgt2l1gwilj7l" path="res://Scripts/Classes/Entities/Enemies/BooBuddy.gd" id="1_76bhf"]
[ext_resource type="Script" uid="uid://caq1qiwmy0mox" path="res://Scripts/Parts/BetterAnimatedSprite.gd" id="2_76bhf"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="3_uemlb"]
[ext_resource type="JSON" path="res://Assets/Sprites/Enemies/BooBuddy.json" id="4_foly5"]
[ext_resource type="Script" uid="uid://ugm6suq4x4cp" path="res://Scripts/Classes/Components/HammerDetection.gd" id="5_dkdsm"]
[ext_resource type="Script" uid="uid://c3gg32ivrlq8n" path="res://Scripts/Classes/Components/GibSpawner.gd" id="6_bobhc"]
[ext_resource type="Script" uid="uid://5octqlf4ohel" path="res://Scripts/Classes/Components/ScoreNoteSpawner.gd" id="7_vwmnu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7u2yg"]
atlas = ExtResource("1_56r8o")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu7y3"]
atlas = ExtResource("1_56r8o")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8qb0a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u2yg")
}],
"loop": true,
"name": &"Hide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu7y3")
}],
"loop": true,
"name": &"WhiteMove",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1eh5v"]
size = Vector2(12, 12)

[node name="BooBuddy" type="Node2D"]
process_mode = 3
script = ExtResource("1_76bhf")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
process_mode = 1
sprite_frames = SubResource("SpriteFrames_8qb0a")
animation = &"WhiteMove"
autoplay = "WhiteMove"
flip_h = true
script = ExtResource("2_76bhf")
do_offset = false
metadata/_custom_type_script = "uid://caq1qiwmy0mox"

[node name="ResourceSetterNew" type="Node" parent="Sprite" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("3_uemlb")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("4_foly5")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="Hitbox" type="Area2D" parent="."]
process_mode = 1

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_1eh5v")

[node name="HammerDetection" type="Node" parent="." node_paths=PackedStringArray("hitbox")]
process_mode = 1
script = ExtResource("5_dkdsm")
hitbox = NodePath("../Hitbox")
metadata/_custom_type_script = "uid://ugm6suq4x4cp"

[node name="GibSpawner" type="Node" parent="." node_paths=PackedStringArray("visuals")]
process_mode = 1
script = ExtResource("6_bobhc")
visuals = NodePath("../Sprite")
metadata/_custom_type_script = "uid://c3gg32ivrlq8n"

[node name="ScoreNoteSpawner" type="Node" parent="."]
process_mode = 1
script = ExtResource("7_vwmnu")
add_score = true
play_sfx = true
metadata/_custom_type_script = "uid://5octqlf4ohel"

[connection signal="area_entered" from="Hitbox" to="." method="on_area_entered"]
[connection signal="hammer_hit" from="HammerDetection" to="." method="hammer_die"]
